2010-02-18  John W. Eaton  <jwe@octave.org>

	* image/imfinfo.m: Don't handle file time stamp here.

2010-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/base/center.m: Convert integer inputs to doubles.

2010-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp2: Slightly optimize linear interpolation.

2010-02-12  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp2: Remove debug stub.

2010-02-12  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/optimget.m: Simplify.

2010-02-11  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/parseparams.m: Extend to allow direct parsing of
	options.

2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: Undocument impossible info values.
	* optimization/fzero.m: Ditto.

	* optimization/fzero.m: Make default TolX consistent with fminbnd.
2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: New function.
	* optimization/module.mk: Add it here.
	* optimization/fzero.m: Make default TolX consistent with fminbnd.

2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* general/private/__isequal__.m: Remove list-related stub.

2010-02-09  John W. Eaton  <jwe@octave.org>

	* image/imshow.m: Allow logical values for images.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Use != instead of diff to compare indices in
	dense case. Set explicit mode in sparse case to aid optimization.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/menu.m: Use sscanf rather than eval.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/substruct.m: Vectorize.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Document complexity.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Add new test that also forces index cache
	generation for faster sorting.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: 1 more small fix.
